# xc

./: .gitignore  NOTICE  cabal.nix  default.nix  readme.md  test.bash  txt
dependencies/: default.nix
dependencies/libbashuu/: libbashuu-update  libbashuu.json  libbashuu.nix
examples/cassandra-in-docker/tests/: run-tests.bash
examples/nixos-on-virsh/: readme.md
examples/nixos-on-virsh/implementation-common/: my-xc-deploy  my-xc-destroy  my-xc-list  my-xc-list-nodes-ids  my-xc-node-activate  my-xc-node-build  my-xc-node-console  my-xc-node-copy-closure-to  my-xc-node-deploy  my-xc-node-destroy  my-xc-node-ssh  my-xc-node-stop  my-xc-shape  my-xc-status  my-xc-stop  option-my-xc-hostname  option-my-xc-name  option-my-xc-nix-expression-path  option-my-xc-node-id  option-my-xc-node-memory  option-my-xc-nodes-count  option-my-xc-ssh-private-key-path
examples/nixos-on-virsh/implementation-virsh/: my-xc-destroy-implementation  my-xc-list-implementation  my-xc-list-nodes-ids-implementation  my-xc-node-activate-implementation  my-xc-node-build-implementation  my-xc-node-console-implementation  my-xc-node-copy-closure-to-implementation  my-xc-node-deploy-implementation  my-xc-node-destroy-implementation  my-xc-node-reboot-implementation  my-xc-node-ssh-implementation  my-xc-node-stop-implementation  my-xc-shape-implementation
examples/nixos-on-virsh/tests/: my-nodes.nix  run-tests.bash
lib/: xc-lib-virsh.bash  xc-lib.bash
random-pieces-of-code/google/: create-image.bash  default.nix  start.bash
src/: Main.hs  xc.cabal
