Name: xc
Version: 0.0.0
Build-type: Simple
Cabal-version: >=1.8

executable xc
  main-is: Main.hs
  buildable: True
  build-depends:
    base,
    parallel-io,
    random,
    concurrent-extra,
    unbounded-delays,
    concurrent-output,
    ascii-progress,
    async,
    system-filepath,
    data-default,
    directory,
    process,

    either,
    lens,
    -- data-default,
    -- these,
    optparse-applicative,
    bytestring,
    cryptonite,
    containers,
    aeson,
    -- uuid-aeson,
    time,
    uuid,
    string-conversions,
    file-embed,
    text,
    http-types,
    scientific,
    yaml,
    mtl,
    unix,
    string-qq,
    temporary,
    hashable
  ghc-options:
  -- ghc-options: -Wincomplete-patterns -threaded -Wall -fwarn-tabs -funbox-strict-fields -O3 -H500m  -Werror -fwarn-missing-methods -fno-warn-missing-signatures
